# MyQuant

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  NOTICE.md  README.md
cmake/: MyQuantInfo.plist.in  fix_macos_bundle.cmake
qml/: Main.qml
qml/components/: AppScrollBar.qml  LineChart.qml  MetricCard.qml  SectionPanel.qml  TradeChart.qml
qml/pages/: EtfPage.qml  NotesPage.qml  SettingsPage.qml
resources/icons/: MyQuant.icns
resources/scripts/: akshare_fetch.py
resources/seed/: etf_universe.csv
src/: AppPaths.cpp  AppPaths.h  EtfRotationController.cpp  EtfRotationController.h  NotesController.cpp  NotesController.h  SettingsController.cpp  SettingsController.h  main.cpp
tests/: smoke_tests.cpp
tools/: generate_icon.py  package_macos.sh
